--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,7 +15,7 @@ const { href, title, body } = Astro.props as Props;
 			<span>&rarr;</span>
 		</h2>
 		<p>
-			this card is for hello {body}
+			{body}
 		</p>
 	</a>
 </li>
