--- a/src/components/Question.astro
+++ b/src/components/Question.astro
@@ -1,10 +1,4 @@
-<section class="md:pb-20">
-  <div class="container mx-auto text-center">
-    <h3 class="text-2xl leading-2xl font-semibold mb-1">Have a billing question?</h3>
-    <p class="py-2">
-      Please reach out directly to
-      <a href="mailto:billing@cypress.io" class="text-indigo-500 underline">billing@cypress.io</a>
-      for further billing questions.
-    </p>
-  </div>
-</section>
+<a>for</a>
+<style>
+  /** remove this style block to make the Astro language server insane */
+</style>
